public/css/module/api-search.less
.api-search {
  @searchHeight: 25px;
  @labelWidth: 41px;
  @searchBackground: lighten(@header-bg, 10%);
  @searchText: contrast(@searchBackground);
  @searchBorder: black;
  @refColor: #3588D6;

  height: 100%;

  .container {
    display: block;
    position: absolute;
    line-height: @searchHeight;
    height: @searchHeight;
    top: 50%;
    left: 0;
    margin-top: -(@searchHeight / 2) - 1px;

    & > label {
      .label {
        position: absolute;
        left: 0;
        top: 0;
        color: #aaa;
        font-size: 12px;
        width: @labelWidth;
        text-align: right;
        line-height: @searchHeight;
        cursor: pointer;
      }

      @shortcutHeight: 15px;
      .search-shortcut {
        position: absolute;
        top: 50%;
        right: 0;
        line-height: @shortcutHeight;
        margin-top: -(@shortcutHeight / 2) - 1;
        color: mix(@searchBackground, @searchText, 50%);
        font-size: 11px;
        margin-right: 5px;
        padding: 2px 3px;
        .border-radius(3px);
        background: rgba(0,0,0,0.1);
        cursor: pointer;
      }
      &.hasFocus .search-shortcut, &.hasQuery .search-shortcut {
        display: none;
      }
    }
  }

  input[name="search"] {
    display: inline-block;
    width: 160px;
    height: @searchHeight;
    border: 1px solid @searchBorder;
    .border-radius(3px);
    padding: 3px 5px 3px @labelWidth;
    .box-sizing(border-box);
    background: @searchBackground;
    color: @searchText;

    &:hover {
      background: lighten(@searchBackground, 5%);
    }

    &:focus {
      background: lighten(@searchBackground, 10%);
    }
  }

  @transitionSpeed: 0.2s;
  @delaySpeed: 0.3s;
  &.searchResultsVisible {
    .results {
      margin-top: 5px;
      opacity: 1;
      height: auto;
      overflow: visible;
      border: 3px solid @searchBorder;
      border-top-width: 0;
    }
  }

  .results {
    @resultsText: contrast(@searchBackground);
    @titleHeight: 30px;

    position: absolute;
    top: 100%;
    right: 0;
    z-index: 200;
    width: 310px;
    background: black;
    color: @resultsText;
    margin-top: -5px;
    opacity: 0;
    font-size: 13px;
    line-height: 15px;
    .border-radius(3px);
    overflow: hidden;
    height: 0;
    .transition(opacity @transitionSpeed ease, margin @transitionSpeed ease);
    .box-shadow(0 1px 3px -1px black);
    cursor: auto;

    // &:after {
    //   bottom: 100%;
    //   right: 20px;
    //   border: solid transparent;
    //   content: " ";
    //   height: 0;
    //   width: 0;
    //   position: absolute;
    //   pointer-events: none;
    //   border-color: transparent;
    //   border-bottom-color: @searchBackground;
    //   border-width: 5px;
    //   margin-left: -5px;
    // }

    & > .content {
      padding: 5px;
      background: @searchBackground;
      .border-radius(3px);
      position: relative;
      max-height: 300px;
      overflow-y: auto;
    }

    @resultsTitleColor: mix(@resultsText, @searchBackground);
    & > .results-title {
      color: @resultsTitleColor;
      font-size: 12px;
      font-weight: bold;
      line-height: @titleHeight;
      padding-left: 5px;

      .spinner {
        margin-left: 5px;
      }

      .query-text {
        font-weight: normal;
        color: white;
        padding-left: 5px;
      }
    }

    @closeWidth: 30px;
    .num-results {
      position: absolute;
      right: @closeWidth;
      top: 0;
      color: darken(@resultsTitleColor, 15%);
    }

    & > .close {
      position: absolute;
      top: 0;
      right: 0;
      z-index: 1;
      color: mix(@resultsText, @searchBackground);
      width: @closeWidth;
      height: @titleHeight;
      line-height: @titleHeight;
      cursor: pointer;
      .box-sizing(border-box);
      text-align: center;

      &:hover {
        color: @resultsText;
      }

      &:active {
        color: mix(@resultsText, @searchBackground, 70%);
      }
    }
  }

  api-search-result + api-search-result {
    .api-search-result {
      margin-top: 5px;
    }
  }

  .api-search-result {
    @searchResultBackground: #222;
    display: block;
    text-align: left;
    background: @searchResultBackground;
    color: mix(white, @searchBackground, 65%);
    .border-radius(3px);
    border: 1px solid transparent;

    &:hover, &.active {
      border-color: lighten(@searchBackground, 40%);
      background: lighten(@searchResultBackground, 10%);

      .title {
        color: lighten(@refColor, 10%);
      }

      .description {
        color: contrast(@searchBackground);
      }
    }

    &:active {
      border-color: lighten(@searchBackground, 60%);
    }

    .description {
      margin-top: 5px;
    }

    .description, .title, > .path {
      padding: 0 5px 0 5px;
    }

    .title {
      color: mix(white, @searchBackground, 75%);
      font-family: monospace;
      margin: 2px 0 5px;
      color: @refColor;
      .clearblock;

      .text {
        background: darken(@searchBackground, 20%);
        padding: 5px;
        .border-radius(3px);
        border: 1px solid black;
        display: block;
        float: left;

        &:hover {
          text-decoration: underline;
        }

        &:active {
          text-decoration: none;
        }
      }
    }

    .description {
      font-size: 12px;
    }

    .content {
      padding: 5px 0;
    }

    .path {
      .clearblock;
      font-size: 11px;
      background: rgba(255,255,255,0.1);
      .border-radius(3px 3px 0 0);

      .icon, .step {
        line-height: 18px;
      }

      .icon {
        float: left;
      }

      .step {
        float: left;
        .border-radius(3px);
      }
    }
  }
}

.pane-component .api-search {
  @searchHeight: 35px;

  padding: 10px 0 10px 10px;

  .container {
    position: relative;
    top: 0;
    margin-top: 0;
    line-height: @searchHeight;
    height: @searchHeight;

    & > label .label {
      line-height: @searchHeight;
    }
  }

  input[name="search"] {
    display: block;
    width: 100%;
    height: @searchHeight;
  }
}

@media screen and (max-width: 670px) {
  .search-shortcut {
    display: none;
  }

  .api-search {
    input[name="search"] {
      width: 100px;
    }
  }
}

